[tool.poetry]
name = "mmer"
version = "0.1.0"
description = ""
authors = ["Matteo Donato <matteo.donato@joule.video>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "1.11.0"
torchvision = "0.12.0"
torchaudio = "0.11.0"
pandas = "1.3.3"
librosa = "0.8.1"
tqdm = "4.62.3"
transformers = "4.16"
textgrid = "1.5"
torchnet = "0.0.4"
torchmetrics = "0.7.2"
optuna = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
